--- a/css/common.css
+++ b/css/common.css
@@ -66,6 +66,10 @@ main {
     margin: 10px;
 }
 
+main h2 {
+    text-align: center;
+}
+
 footer {
     /* background-color: #354259; */
     padding: 0.5em;
