--- a/css/common.css
+++ b/css/common.css
@@ -62,8 +62,13 @@ header {
 }
 
 main {
+    text-align: center;
     padding: 20px;
     margin: 10px;
+}
+
+main > h2 {
+    font-size: 1.75em;
 }
 
 footer {
