--- a/css/general.css
+++ b/css/general.css
@@ -2,3 +2,24 @@ main ul li {
     list-style: none;
     line-height: 2.5rem;
 }
+
+.actors {
+    text-align: center;
+    display: inline-block;
+    margin: 0 2vw 2vw 2vw;
+}
+
+.imatgeActor {
+    width: 20vw;
+    height: 20vw;
+    object-fit: cover;
+    align-items: center;
+
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+.textActor {
+    display: block;
+    text-align: center;
+}
