--- a/css/general.css
+++ b/css/general.css
@@ -3,13 +3,13 @@ main ul li {
     line-height: 2.5rem;
 }
 
-.actors {
+.actors, .directors {
     text-align: center;
     display: inline-block;
     margin: 0 2vw 2vw 2vw;
 }
 
-.imatgeActor{
+.imatgeActor, .imatgeDirector {
     width: 20vw;
     height: 20vw;
     object-fit: cover;
@@ -18,7 +18,21 @@ main ul li {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
-.textActor {
+.imatgeActor:hover + .textActor, .imatgeDirector:hover + .textDirector  {
+    text-decoration: 2px underline;
+}
+
+.textActor, .textDirector {
     display: block;
     text-align: center;
+}
+
+.distribuidores, .productores {
+    display: inline-block;
+    margin: 0 2vw 0 2vw;
+}
+
+.imgDistribuidores, .imgProductores {
+    width: 5vw;
+    height: auto;
 }
