--- a/css/general.css
+++ b/css/general.css
@@ -36,3 +36,32 @@ main ul li {
     width: 5vw;
     height: auto;
 }
+
+.trama {
+    padding: 1vh;
+    display: inline-block;
+    width: 25vw;
+    height: auto;
+    border-radius: 15px;
+    margin: 0 2vw 0 2vw;
+    color: white;
+    background-color: #354259;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+.titolTrama {
+    font-size: 25px;
+}
+
+.textTrama {
+    font-size: 17px;
+    line-height: 1.75rem;
+}
+
+.trama:hover .titolTrama {
+    text-decoration: 2px underline;
+} 
+
+.trama:hover .textTrama {
+    opacity: 1;
+} 
