--- a/css/common.css
+++ b/css/common.css
@@ -83,20 +83,13 @@ footer {
 }
 
 .socialIcon {
-    height: 15px;
+    border-radius: 0;
+    height: 1vw;
     width: auto;
 }
 
 .social {
     display: inline-block;
-    margin: 0 1.5rem 0 1.5rem;
-    border-bottom: 2em;
-}
-
-.socialText {
-    margin-left: 5px;
-    font-size: 13px;
-    color: black;
-    text-decoration: none;
-    letter-spacing: 0.05em;
+    margin: 0 1rem 0 1rem;
+    /* border-bottom: 2em; */
 }
