--- a/css/fotos.css
+++ b/css/fotos.css
@@ -1,3 +1,4 @@
+/*
 img {
     display: inline-block;
     width: 45vw;
@@ -5,4 +6,90 @@ img {
     margin: .5vh;
 
     border-radius: 15px;
+}*/
+
+.inps {
+    display: none;
+}
+
+.slide {
+    margin: 0 auto;
+    /* margin-top: 20px; */
+    
+    position: relative;
+    width: 70%;
+    height: 0;
+    padding-bottom: 38%;
+
+    user-select: none;
+
+    background-color: #1c1c1c;
+    border: solid 3px black;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+.slide .slide_img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.slide .slide_img img {
+    border-radius: 10px;
+    width: inherit;
+    height: inherit;
+}
+
+.prev, .next {
+    width: 5%;
+    height: 15%;
+
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0 auto;
+
+    background-color: rgba(0, 0, 0, .25);
+    color: rgba(255, 255, 255, .8);
+    
+    cursor: pointer;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.next {
+    right: 0;
+    /* border-radius: 0 10px 10px 0; */
+    /* border-radius: 20px; */
+}
+
+.prev {
+    left: 0;
+    /* border-radius: 10px 0 0 10px; */
+}
+
+label span {
+    position: absolute;
+    font-size: 4vw;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, .5);
+    color: #fff;
+}
+
+#i1:checked~#one,
+#i2:checked~#two,
+#i3:checked~#three,
+#i4:checked~#four,
+#i5:checked~#five,
+#i6:checked~#six,
+#i7:checked~#seven,
+#i8:checked~#eight,
+#i9:checked~#nine,
+#i10:checked~#ten {
+    z-index: 1;
 }
