--- a/css/fotos.css
+++ b/css/fotos.css
@@ -1,20 +1,9 @@
-/*
-img {
-    display: inline-block;
-    width: 45vw;
-    height: auto;
-    margin: .5vh;
-
-    border-radius: 15px;
-}*/
-
-.inps {
+input {
     display: none;
 }
 
 .slide {
     margin: 0 auto;
-    /* margin-top: 20px; */
     
     position: relative;
     width: 70%;
@@ -23,7 +12,7 @@ img {
 
     user-select: none;
 
-    background-color: #1c1c1c;
+    color: white;
     border: solid 3px black;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
@@ -31,6 +20,7 @@ img {
 
 .slide .slide_img {
     position: absolute;
+    background-color: #1c1c1c;
     width: 100%;
     height: 100%;
 }
@@ -43,15 +33,14 @@ img {
 
 .prev, .next {
     width: 5%;
-    height: 15%;
+    height: 10%;
 
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    margin: 0 auto;
 
-    background-color: rgba(0, 0, 0, .25);
-    color: rgba(255, 255, 255, .8);
+    background-color: #1c1c1c;
+    color: rgba(255, 255, 255, .9);
     
     cursor: pointer;
     text-align: center;
@@ -60,24 +49,22 @@ img {
 
 .next {
     right: 0;
-    /* border-radius: 0 10px 10px 0; */
-    /* border-radius: 20px; */
+    margin-right: 1vw;
 }
 
 .prev {
     left: 0;
-    /* border-radius: 10px 0 0 10px; */
+    margin-left: 1vw;
 }
 
 label span {
     position: absolute;
     font-size: 4vw;
-    top: 50%;
-    transform: translateY(-50%);
+    transform: translate(-50%, -20%);
 }
 
 .prev:hover, .next:hover {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .9);
     color: #fff;
 }
 
